--- a/speaking/index.html
+++ b/speaking/index.html
@@ -7,7 +7,7 @@ title: Enrico Campidoglio
   <h1 class="backdrop speaking">Speaking</h1>
   <p>
     Going out and meet the developer community while giving technical talks is something I
-    throughly enjoy. Whether it be at a big conference, a user group or at a
+    truly enjoy. Whether it be at a big conference, a user group or at a
     client, I love sharing knowledge and experiences. And the best part is, it
     goes both ways: with every presentation, I teach something and learn something new myself.
   </p>
