--- a/speaking/index.html
+++ b/speaking/index.html
@@ -26,7 +26,7 @@ title: Enrico Campidoglio
   {% for post in site.posts %}
   {% if post.categories contains 'speaking' %}
   <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
-  <p style="font-size: 95%">
+  <p class="thumbnail-caption">
     {% if post.video %}
     <iframe src="{{ post.video }}"
             class="video thumbnail"
