Adds a podcasts section in the speaking page.

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -20,6 +20,24 @@ redirect_from: /tag/speaking/
 
   <hr/>
 
+  <h2>Podcasts</h2>
+  <p>
+    Here's a list of podcasts I have been a guest on:
+  </p>
+
+  <h4>.NET Rocks! 1079: <a href="https://www.dotnetrocks.com/?show=1079" target="_blank">Databases in Continuous Delivery</a></h4>
+  <p>While I was at NDC London 2014, I spoke to Carl and Richard about including
+  relational databases in the Continuous Delivery process. I had a lot of fun
+  doing this episode and we even managed to squeeze in a few words about vintage
+  computers — I couldn't have asked for more.</p>
+
+  <h4>.NET Rocks! 1082: <a href="https://www.dotnetrocks.com/?show=1082" target="_blank">State of DevOps in .NET at NDC London</a></h4>
+  <p>This episode was a panel discussion recorded live in front of an audience at NDC London
+  2014. The topic was the presence of the DevOps culture among .NET developers.
+  During the discussion we also shared our experiences with implementing Continuous Delivery in .NET projects. The panel consisted of Ben Hall, Peter Mounce, Jeff French and myself.</p>
+
+  <hr />
+
   <h2>Presentations</h2>
   <p>Here's a selection of some of the most popular presentations that I've been
   giving during the past few years. In each of them you'll find the
