Renames the 'theme' config option to 'style'.
As of Jekyll 3.2.1 'theme' is a reserved keyword,
so it can no longer be used as a configuration option.

https://github.com/jekyll/jekyll/issues/5163#issuecomment-236320771

--- a/bestof/index.html
+++ b/bestof/index.html
@@ -12,7 +12,7 @@ title: Best Of
         <div class="thumbnail-container">
           <div class="thumbnail-image" style="background-image: url({{ post.image }});{% if post.imagesize %}background-size: {{ post.imagesize }};{% endif %}"></div>
           <span class="fa-stack fa-lg thumbnail-icon">
-            <i class="fa fa-circle fa-stack-2x" style="color: {{ site.theme.highlight_color }};"></i>
+            <i class="fa fa-circle fa-stack-2x" style="color: {{ site.style.highlight_color }};"></i>
             <i class="fa fa-stack-1x" style="color: white;">{{ position }}</i>
           </span>
           <div class="thumbnail-description">
