Changes 'About me' to simply 'About'.

--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@ title: Enrico Campidoglio
 ---
 
 <div id="home">
-  <h1 class="backdrop about">About me</h1>
+  <h1 class="backdrop about">About</h1>
   <p>
     My name is Enrico Campidoglio. I’m a programmer with a strong passion for
     quality and good old fashioned knowlege sharing. Some people say I may also
