Fixes a typo in the speaking page

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -40,7 +40,7 @@ redirect_from: /tag/speaking/
   <hr />
 
   <h2>Presentations</h2>
-  <p>Here's a selection of some of my most popular presentations from recent years. I linked to the <em>slides</em> and <em>demo material</em> as they were available. If a talk was recorded, I made sure to up a link to the <em>video</em> as well.</p>
+  <p>Here's a selection of some of my most popular presentations from recent years. I linked to the <em>slides</em> and <em>demo material</em> as they were available. If a talk was recorded, I made sure to include a link to the <em>video</em> as well.</p>
 
   <h4>The Things Git Can Do — <a href="https://vimeo.com/171317261"><i class="fa fa-play-circle" aria-hidden="true"></i> NDC Oslo 2016</a> <a href="https://vimeo.com/163822148"><i class="fa fa-play-circle" aria-hidden="true"></i> WROC# 2016</a></h4>
   <p class="thumbnail-caption">
