Uploads the slides for the AutoFixture talk

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -69,7 +69,7 @@ redirect_from: /tag/speaking/
     In this talk, I look at the challenges of continuously deploying a SQL database. I explore issues such as packaging and versioning, handling schema changes, migrating data and recovery. What tools do we have at our disposal? What strategies can we put in place to prevent us from having to bang our heads against the wall when something goes wrong?
   </p>
 
-  <h4 id="testing_the_essential_with_autofixture">Testing the Essential with AutoFixture — <a href="https://vimeo.com/108441213"><i class="fa fa-play-circle" aria-hidden="true"></i> Leetspeak 2014</a></h4>
+  <h4 id="testing_the_essential_with_autofixture">Testing the Essential with AutoFixture — <a href="https://vimeo.com/108441213"><i class="fa fa-play-circle" aria-hidden="true"></i> Leetspeak 2014</a> <a href="{{ site.url }}/speaking/slides/TestingTheEssentialWithAutoFixture.pdf"><i class="fa fa-slideshare" aria-hidden="true"></i> Slides</a></h4>
   <p class="thumbnail-caption">
     <a href="https://vimeo.com/108441213">
       <img src="{{ site.url }}/assets/{{ page.assets }}/leetspeak2014-enricocampidoglio-preview.png"
