Improves a paragraph on the Git page

--- a/git/index.html
+++ b/git/index.html
@@ -52,7 +52,7 @@ redirect_from: /tag/git/
 
   <h2 id="courses">Courses</h2>
   <p>
-    If I ever publish online training about Git, you'll find a link for it here.
+    Sometimes, I have more things to say than can fit in an article or a presentation. That's when I make a course instead. However, those take longer so there are fewer of them. In any case, rest assured that every time I publish a new one, you'll find a link for it here.
   </p>
 
   <h4 id="the_things_git_can_do">Advanced Git Tips and Tricks <span class="hide">—</span> <a href="https://www.pluralsight.com/courses/git-advanced-tips-tricks"><i class="fa fa-play-circle-o" aria-hidden="true"></i> Pluralsight</a></h4>
