Shortens the intro on the Git page

--- a/git/index.html
+++ b/git/index.html
@@ -11,9 +11,7 @@ redirect_from: /tag/git/
 
 <p>One of first things that struck me about Git was its simple design philosophy and elegant architecture. Yes, I know how that sounds, but trust me, Git <em>really</em> is surprisingly simple at its core.</p>
 
-<p>I became obsessed with knowing all of its features and learn to use them in the most efficient way possible. During this journey—and yes, learning Git <em>is</em> a journey, one that never ends—I've accumulated a fair bit of knowledge and I'm always eager to share it with anyone who will listen.</p>
-
-  <p>Over the years, I've both <a href="#articles">written</a> and <a href="#presentations">spoken</a> about Git in articles, presentations, workshops or <a href="https://stackoverflow.com/search?tab=votes&q=user%3a26396%20%5bgit%5d" target="_blank">answers on Stack Overflow</a>. In more than one occasion, I've found myself wanting to link to one of these resources but not being able to find it. This page is an attempt to group everything together in a single place to make it easier to reference. I hope you find it useful.</p>
+  <p>Over the years, I've both <a href="#articles">written</a> and <a href="#presentations">spoken</a> about Git in articles, presentations, workshops or <a href="https://stackoverflow.com/search?tab=votes&q=user%3a26396%20%5bgit%5d" target="_blank">answers on Stack Overflow</a>. In more than one occasion, I've found myself wanting to link to one of these resources but not being able to find it. This page is an attempt to group everything together in a single place to make it easier to reference in the future. I hope you find it useful.</p>
 
   <hr/>
 
