--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@ title: Enrico Campidoglio
 
   <div class="comments">
     <i class="fa fa-comment"></i>
-    <a href="{{ site.url }}{{ post.url }}#disqus_thread"></a>
+    <a href="{{ site.url }}{{ post.url }}#disqus_thread"
+       data-disqus-identifier="{{ post.url }}"></a>
   </div>
 
   {% if forloop.last == false %}
