Adds a punctuation character in the Git page

--- a/git/index.html
+++ b/git/index.html
@@ -7,7 +7,7 @@ redirect_from: /tag/git/
 
 <div id="home">
   <h1 class="backdrop git">Git</h1>
-  <p>My first encounter with Git was in the fall of 2011. After having used <a href="https://www.mercurial-scm.org" target="_blank">Mercurial</a> for only a couple of years, I had already grown tired of its <a href="https://www.mercurial-scm.org/wiki/Branch" target="_blank">fundamental design choices</a>. So I decided to check out that <em>new version control system everybody was talking about</em>.</p>
+  <p>My first encounter with Git was in the fall of 2011. After having used <a href="https://www.mercurial-scm.org" target="_blank">Mercurial</a> for only a couple of years, I had already grown tired of its <a href="https://www.mercurial-scm.org/wiki/Branch" target="_blank">fundamental design choices</a>. So, I decided to check out that <em>new version control system everybody was talking about</em>.</p>
 
 <p>One of first things that struck me about Git was its simple design philosophy and elegant architecture. Yes, I know how that sounds, but trust me, Git <em>really</em> is surprisingly simple at its core.</p>
 
