Makes a few corrections in the about page

--- a/about/index.html
+++ b/about/index.html
@@ -38,11 +38,11 @@ title: Enrico Campidoglio
 
   <p>After that, I went on to hold internal courses for private companies aside from my regular consulting assignments. Eventually, in 2011, I started doing <a href="/speaking">public speaking</a> at conferences and user groups events, both local and international.</p>
 
-  <p>In 2017, after 15 years as a consultant, I decided that teaching and mentoring was what I really wanted to do, so I made into my full time job by becoming <a href="/offering">a freelancer</a>.</p>
+  <p>In 2017, after 15 years as a consultant, I decided that teaching and mentoring was what I really wanted to do, so I made it my full time job by becoming <a href="/offering">a freelancer</a>.</p>
 
   <h3>Blog</h3>
   
-  <p>In 2008, I started <a href="/">this blog</a> as an outlet for sharing narrower topics that wouldn't necessarily be enough to make a talk or a course. Funnily enough, many of the ideas that I ended up presenting actually started out as blog posts. If want to get a sense for what I write about, I recommend you to check out my most popular articles on the <a href="/bestof">best-of page</a>.
+  <p>In 2008, I started <a href="/">this blog</a> as an outlet for sharing narrower topics that wouldn't necessarily be enough for a talk or a course. Ironically, many of the ideas that I ended up presenting actually started out as blog posts. If you want to get a sense for what I write about, you're welcome to check out my most popular articles on the <a href="/bestof">best-of page</a>.
 
   <h3>Pluralsight</h3>
 
