Uses root-relative links in a few more pages

--- a/offering/index.html
+++ b/offering/index.html
@@ -10,7 +10,7 @@ title: Offering
 
   <p>I'm a strong believer in continuous improvement. I'm always on the lookout for new things to learn that will help me get better at what I do. Once I learn something, I love sharing that knowledge with others. In fact, I made teaching and mentoring <a href="/about/#my_mission">my mission</a>.</p>
 
-  <p>If you're part of a team of developers who is looking to improve <a href="#topics">in of these topics</a>, I might be able to help. Here's what I can do for you.</p>
+  <p>If you're part of a team of developers who is looking to improve <a href="/offering/#topics">in of these topics</a>, I might be able to help. Here's what I can do for you.</p>
 
   <hr/>
 
@@ -20,7 +20,7 @@ title: Offering
 
   <p>
   <span class="thumbnail-article" style="background-image: url('/assets/offering/classroom-training.jpg'); background-position: center; width: 230px; height: 153px; margin-left: 3%; margin-top: 8px; box-shadow: 0 0 9px 0 rgba(0,0,0,0.8)"></span>
-  The best way for you to learn depends on your needs and how much you can fit in your schedule: it might be enough with just a 1 hour presentation (maybe combined with a breakfast seminar or during lunch break) or you may want to have a full-day workshop. I deliver both kinds of training on any of the <a href="#topics">topics I specialize in.</a></p>
+  The best way for you to learn depends on your needs and how much you can fit in your schedule: it might be enough with just a 1 hour presentation (maybe combined with a breakfast seminar or during lunch break) or you may want to have a full-day workshop. I deliver both kinds of training on any of the <a href="/offering/#topics">topics I specialize in.</a></p>
 
   <p>If you want to get a sense for my areas of expertise and my teaching style, you're welcome to head over to the <a href=/speaking">speaking page</a> and have a look at some of my previous <a href=/speaking/#presentations">presentations</a>.</p>
 
@@ -84,7 +84,7 @@ title: Offering
 
   <div class="footnotes">
     <p>
-    The image used at the <a href="#header">top of this page</a> is a modification based on a photo kindly licensed by the <a href="https://techorama.be" target="_blank">Techorama conference</a>.
+    The image used at the <a href="/offering/#header">top of this page</a> is a modification based on a photo kindly licensed by the <a href="https://techorama.be" target="_blank">Techorama conference</a>.
     </p>
   </div>
 </div>
