--- a/workshops/index.html
+++ b/workshops/index.html
@@ -104,7 +104,7 @@ title: Workshops
 
   <h3>Audience</h3>
 
-  <p>To get the most out of <a href="#mastering_git">Mastering Git</a>, you should feel confident with Git's fundamental concepts. If you'd like to strengthen your knowledge in that area, I highly recommend that you take <a href="#understanding_git">Understanding Git</a> first and have this as a continuation; both workshops complement each other nicely, since they share the same visualization techniques to explain the concepts.</p>
+  <p>To get the most out of <a href="/workshops/#mastering_git">Mastering Git</a>, you should feel confident with Git's fundamental concepts. If you'd like to strengthen your knowledge in that area, I highly recommend that you take <a href="/workshops/#understanding_git">Understanding Git</a> first and have this as a continuation; both workshops complement each other nicely, since they share the same visualization techniques to explain the concepts.</p>
 
   <p>You should also be familiar with handling a command-line shell. During the workshop, I'll use either <em>PowerShell</em> or <em>Bash</em>, based on your preference.</p>
 
