--- a/workshops/index.html
+++ b/workshops/index.html
@@ -10,6 +10,8 @@ title: Workshops
 
   <p>All workshops include a Q&A session. In order to get the most out of it, I encourage you to email me your questions beforehand. That will help me get a sense for where you stand on the topic and identify any particular areas where to put extra emphasis during the workshop.</p>
 
+  <p>If you'd like to know more, here's how you can <a href="/offering/#contact">contact me</a>.</p>
+
   <hr/>
 
   <h2 id="understanding_git">
