Shortens the intro in the Git page

--- a/git/index.html
+++ b/git/index.html
@@ -7,11 +7,10 @@ redirect_from: /tag/git/
 
 <div id="home">
   <h1 class="backdrop git">Git</h1>
-  <p>My first encounter with Git was in the fall of 2011. After having used <a href="https://www.mercurial-scm.org" target="_blank">Mercurial</a> for only a couple of years, I had already grown tired of its <a href="https://www.mercurial-scm.org/wiki/Branch" target="_blank">fundamental design choices</a>. So, I decided to check out that <em>new version control system everybody was talking about</em>.</p>
 
-<p>One of first things that struck me about Git was its simple design philosophy and elegant architecture. Yes, I know how that sounds, but trust me, Git <em>really</em> is surprisingly simple at its core.</p>
+  <p>Over the years, I've both <a href="/git/#articles">written</a> and <a href="/git/#presentations">spoken</a> about Git in articles, presentations, workshops or by <a href="https://stackoverflow.com/search?tab=votes&q=user%3a26396%20%5bgit%5d" target="_blank">answering questions on Stack Overflow</a>.</p>
 
-  <p>Over the years, I've both <a href="/git/#articles">written</a> and <a href="/git/#presentations">spoken</a> about Git in articles, presentations, workshops or <a href="https://stackoverflow.com/search?tab=votes&q=user%3a26396%20%5bgit%5d" target="_blank">answers on Stack Overflow</a>. In more than one occasion, I've found myself wanting to link to one of these resources but not being able to find it. This page is an attempt to group everything together in a single place to make it easier to reference in the future. I hope you find it useful.</p>
+  <p>In more than one occasion, I've found myself wanting to link to one of those resources but not being able to find it. This page is an attempt to group everything together in a single place to make it easier to reference in the future. I hope you find it useful.</p>
 
   <hr/>
 
