Adds a missing word in the offering page

--- a/offering/index.html
+++ b/offering/index.html
@@ -10,7 +10,7 @@ title: Offering
 
   <p>I'm a strong believer in continuous improvement. I'm always on the lookout for new things to learn that will help me get better at what I do. Once I learn something, I love sharing that knowledge with others. In fact, I made teaching and mentoring <a href="/about/#my_mission">my mission</a>.</p>
 
-  <p>If you're part of a team of developers who is looking to improve <a href="/offering/#topics">in of these topics</a>, I might be able to help. Here's what I can do for you.</p>
+  <p>If you're part of a team of developers who is looking to improve <a href="/offering/#topics">in one of these topics</a>, I might be able to help. Here's what I can do for you.</p>
 
   <hr/>
 
