Corrects the title casing in the offerings page

--- a/offering/index.html
+++ b/offering/index.html
@@ -28,7 +28,7 @@ title: Offering
 
   <hr/>
 
-  <h2 id="teaching_by_doing">Teaching By Doing</h2>
+  <h2 id="teaching_by_doing">Teaching by Doing</h2>
 
   <p>Traditional classroom training is a great way to get you started on a topic but it can only get you so far. Once the workshop is over, it's up to you to continue your journey by finding new ways to learn. Being in training also means <em>being away from your project</em>. This alone can seriously limit the amount of time you are able to invest.</p>
 
