Makes a minor correction in the offerings page

--- a/offering/index.html
+++ b/offering/index.html
@@ -6,7 +6,7 @@ title: Offering
 <div id="home">
   <h1 id="header" class="backdrop offering">Offering</h1>
 
-  <p>I've been a consultant since early 2002. During my career, I joined teams of all sizes to help them develop software for their customers.</p>
+  <p>I've been a consultant since early 2002. During my career, I've joined teams of all sizes to help them develop software for their customers.</p>
 
   <p>I'm a strong believer in continuous improvement. I'm always on the lookout for new things to learn that will help me get better at what I do. Once I learn something, I love sharing that knowledge with others. In fact, I made teaching and mentoring <a href="/about/#my_mission">my mission</a>.</p>
 
