Makes a few corrections in the about page

--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@ title: Enrico Campidoglio
 
   <h2 id="my_mission">My Mission</h2>
 
-  <p>Let me start with an interesting fact about me: I've been a <a href="https://en.wikipedia.org/wiki/Scouting" target="_blank">scout</a> for almost 10 years of my life. It was between age 9 and 19, so pretty much my formative years. In retrospect, it was a <em>great experience</em>, even though I didn't always think of it that way at the time. Anyway, you may have heard of <a href="https://en.wikipedia.org/wiki/Robert_Baden-Powell,_1st_Baron_Baden-Powell" target="_blank">Lord Robert Baden-Powell</a> — he was a lieutenant general in the British Army who, in 1907, founded the <a href="https://en.wikipedia.org/wiki/Scouting" target="_blank">Scouting movement</a> based on the motto <a href="https://en.wikipedia.org/wiki/Scout_Motto#Baden-Powell_on_.22Be_Prepared.22" target="_blank"><em>"Be Prepared"</em></a>. And being prepared is exactly what they teach you at the scouts.</p>
+  <p>Let me start by telling you an interesting fact about me: I've been a <a href="https://en.wikipedia.org/wiki/Scouting" target="_blank">scout</a> for almost 10 years of my life. It was between age 9 and 19, so pretty much my formative years. In retrospect, it was a <em>great experience</em>, even though I didn't always think of it that way at the time. Anyway, you may have heard of <a href="https://en.wikipedia.org/wiki/Robert_Baden-Powell,_1st_Baron_Baden-Powell" target="_blank">Lord Robert Baden-Powell</a> — he was a lieutenant general in the British Army who, in 1907, founded the <a href="https://en.wikipedia.org/wiki/Scouting" target="_blank">Scouting movement</a> based on the motto <a href="https://en.wikipedia.org/wiki/Scout_Motto#Baden-Powell_on_.22Be_Prepared.22" target="_blank"><em>"Be Prepared"</em></a>. And being prepared is exactly what they teach you at the scouts.</p>
 
   <p>Another thing you learn from being a scout comes from another of Baden-Powell's mottos: <em>leave this world a little better than you found it</em>.</p>
 
@@ -34,19 +34,21 @@ title: Enrico Campidoglio
 
   <h2 id="what_i_do">What I Do</h2>
 
-  <p>There are many ways to teach technical subjects. I started out in 2004 by teaching a Linux programming class in a local continuing education program. I was a consultant back then and that was my first <em>real</em> teaching job. I was excited. Although I would regularly lose my voice at the end of each day, I found the experience <em>very compelling</em>. So I kept doing it.</p>
+  <p>There are many ways to teach technical subjects. I started out in 2004 by teaching a Linux programming class in a local continuing education program. I was a consultant back then and that was my first <em>real</em> teaching job. I was excited. Although I would regularly lose my voice at the end of each day, I found the experience <em>very compelling</em>. So I kept at it. In the following years, I would hold many internal courses for private companies between my regular consulting assignments.</p>
 
-  <p>After that, I went on to hold internal courses for private companies aside from my regular consulting assignments. Eventually, in 2011, I started doing <a href="/speaking">public speaking</a> at conferences and user groups events, both local and international.</p>
+  <p>Eventually, in late 2017, I decided that teaching and mentoring was what I really wanted to do, so I made it my full time job by becoming <a href="/offering">a freelancer</a>. Of course, I'm first and foremost a <em>programmer</em>, so I also write code both as part of my job as well as for open source projects.</p>
 
-  <p>In 2017, after 15 years as a consultant, I decided that teaching and mentoring was what I really wanted to do, so I made it my full time job by becoming <a href="/offering">a freelancer</a>.</p>
+  <h3>Speaking</h3>
 
-  <h3>Blog</h3>
+  <p>I've been <a href="/speaking">speaking</a> at conferences and user groups events around the world since 2011. My talks are usually pretty technical, but I try to keep things interesting by squeezing in as much humor as I can. While doing that, I also learned that humor is an extremely <em>local</em> thing and that the line between laughter and tumbleweed is surprisingly thin. 😳</p>
+
+  <h3>Blogging</h3>
   
-  <p>In 2008, I started <a href="/">this blog</a> as an outlet for sharing narrower topics that wouldn't necessarily be enough for a talk or a course. Ironically, many of the ideas that I ended up presenting actually started out as blog posts. If you want to get a sense for what I write about, you're welcome to check out my most popular articles on the <a href="/bestof">best-of page</a>.
+  <p>In 2008, I started <a href="/">this blog</a> as an outlet for sharing narrower topics that wouldn't necessarily be enough for a talk or a course. Ironically, many of the ideas that I ended up presenting actually started out as blog posts. If you want to get a sense for what I write about, you're welcome to check out my most popular articles on the <a href="/bestof">best-of page</a>.</p>
 
   <h3>Pluralsight</h3>
 
-  In 2015, I started producing online training for <a href="https://www.pluralsight.com" target="_blank">Pluralsight</a>. You can find my curriculum of courses on my <a href="https://www.pluralsight.com/authors/enrico-campidoglio" target="_blank">author page</a>. 
+  <p>In 2015, I started producing online training for <a href="https://www.pluralsight.com" target="_blank">Pluralsight</a>. You can find my curriculum of courses on my <a href="https://www.pluralsight.com/authors/enrico-campidoglio" target="_blank">author page</a>.</p>
 
   <h3>Open Source</h3>
 
