Makes a few corrections in the workshops page

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -19,7 +19,7 @@ title: Workshops
     <span class="subtitle">1 Day — Beginner</span>
   </h2>
 
-  <p>Git has become the de-facto standard version control system of our industry and for good reason. What you're able to achieve with Git is unmatched by any other version control system that came before it. But for all its power and flexibility, Git has a terrible flaw: its complexity. A myriad of awkwardly named commands and options, have earned Git the reputation of being <em>hard</em>—and unnecessarily so—both to learn and to use.</p>
+  <p>Git has become the <em>de-facto</em> version control system of our industry, and for good reason. What you're able to achieve with Git is unmatched by any other version control system that came before it. But for all its power and flexibility, Git has a terrible flaw: its complexity. A myriad of awkwardly named commands and options, have earned Git the reputation of being <em>hard</em>—and unnecessarily so—both to learn and to use.</p>
 
   <p>You won't find me arguing with that. In fact, I, too, question whether we need that many options and, most of all, I have my reservations about some of the name choices.</p>
 
