Converts the scouting logo from SVG to PNG

--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@ title: Enrico Campidoglio
 
   <p>Another thing you learn from being a scout comes from another of Baden-Powell's mottos: <em>leave this world a little better than you found it</em>.</p>
 
-  <img class="thumbnail-article" alt="A fleur-de-lis positioned on a trefoil, in the original Scouting colors chosen by Lord Baden-Powell" src="https://upload.wikimedia.org/wikipedia/commons/e/e0/WikiProject_Scouting_fleur-de-lis_dark.svg" style="width: 110px; height: auto; margin-left: 4%; box-shadow: none;"/>
+  <img class="thumbnail-article" alt="A fleur-de-lis positioned on a trefoil, in the original Scouting colors chosen by Lord Baden-Powell" src="/assets/about/scouting_fleur-de-lis.png" style="width: 110px; height: auto; margin-left: 4%; box-shadow: none;"/>
 
   <p>That idea always spoke to me because it gives meaning to so many things in life.</p><p>Eventually—and perhaps unsurprisingly—it even found its way to programming thanks to <a href="https://en.wikipedia.org/wiki/Robert_Cecil_Martin" target="_blank">Robert C. Martin</a>. Martin took it to heart and transformed it into a rule for professional programmers to live by: <em>always check a module in cleaner than when you checked it out</em>. The <a href="http://programmer.97things.oreilly.com/wiki/index.php/The_Boy_Scout_Rule" target="_blank">Boy Scout Rule</a> was born.</p>
 
