Corrects a typo in the workshops page

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -60,7 +60,7 @@ title: Workshops
 
   <p>This workshop is designed for developers who have little to no experience with Git. The only prerequisite is that you're somewhat familiar with using a command-line shell for your operating system of choice. During the workshop, I'll show you how to interact with Git from either <em>PowerShell</em> or <em>Bash</em>.</p>
 
-  <p>Note that you don't have to keep using the command-line after the workshop, if you don't want to; we'll use it as a <em>learning tool</em> to understand how Git works. Once you master the concepts, you'll be able choose any Git client you like and make the most out of it.</p>
+  <p>Note that you don't have to keep using the command-line after the workshop if you don't want to; we'll use it as a <em>learning tool</em> to understand how Git works. Once you master the concepts, you'll be able to choose any Git client of your liking and make the most out of it.</p>
 
   <hr/>
 
