Moves the event date to a new line in the speaking schedule

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -20,22 +20,22 @@ redirect_from: /tag/speaking/
   <p>I keep a schedule of my upcoming talks here. Previous talks are on <a href="http://lanyrd.com/profile/ecampidoglio/" target="_blank">Lanyrd</a>.</p>
 
   <h4>
-    <span style="margin-right: 0.5em">NDC London 2018</span>
-    <span class="nowrap">
+    <span>NDC London 2018</span>
+    <div class="nowrap">
       <span class="inline-info">January 15–19, 2018</span>
       <span class="inline-info">London, UK 🇬🇧</span>
-    </span>
+    </div>
   </h4>
   <h4><a href="https://ndc-london.com/talk/cake-net-core-write-once-build-anywhere/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Cake + .NET Core = Write Once, Build Anywhere</a></h4>
 
   <p></p>
 
   <h4>
-    <span style="margin-right: 0.5em">Swetugg 2018</span>
-    <span class="nowrap">
+    <span>Swetugg 2018</span>
+    <div class="nowrap">
       <span class="inline-info">February 8–9, 2018</span>
       <span class="inline-info">Stockholm, Sweden 🇸🇪</span>
-    </span>
+    </div>
   </h4>
   <h4><a href="https://swetugg.se/swetugg-2018/speakers/enrico-campidoglio/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Understanding Git — Behind the Command Line</a></h4>
 
