Adds CNUG to the list of upcoming talks

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -39,6 +39,17 @@ redirect_from: /tag/speaking/
   </h4>
   <h4><a href="https://swetugg.se/swetugg-2018/speakers/enrico-campidoglio/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Understanding Git — Behind the Command Line</a></h4>
 
+  <p></p>
+
+  <h4>
+    <span>Copenhagen .NET User Group</span>
+    <div class="nowrap">
+      <span class="inline-info">February 21, 2018</span>
+      <span class="inline-info">Copenhagen, Denmark 🇩🇰</span>
+    </div>
+  </h4>
+  <h4><a href="https://www.meetup.com/Copenhagen-Net-User-Group/events/247489498/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Cake + .NET Core = Write Once, Build Anywhere</a></h4>
+
   <hr/>
 
   <h2 id="podcasts">Podcasts</h2>
