Makes the speaking schedule a little more compact

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -17,38 +17,35 @@ redirect_from: /tag/speaking/
   <hr/>
 
   <h2 id="schedule">Schedule</h2>
-  <p>I keep a schedule of my upcoming talks here. Previous talks are on <a href="http://lanyrd.com/profile/ecampidoglio/" target="_blank">Lanyrd</a>.</p>
+  <p>Here's a list of my recent and upcoming talks. Previous ones are on <a href="http://lanyrd.com/profile/ecampidoglio/" target="_blank">Lanyrd</a>.</p>
 
   <h4>
-    <span>NDC London 2018</span>
+      <span><a href="https://ndc-london.com/talk/cake-net-core-write-once-build-anywhere/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> NDC London 2018</a></span>
     <div class="nowrap">
       <span class="inline-info">January 15–19, 2018</span>
       <span class="inline-info">London, UK 🇬🇧</span>
     </div>
   </h4>
-  <h4><a href="https://ndc-london.com/talk/cake-net-core-write-once-build-anywhere/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Cake + .NET Core = Write Once, Build Anywhere</a></h4>
 
   <p></p>
 
   <h4>
-    <span>Swetugg 2018</span>
+      <span><a href="https://swetugg.se/swetugg-2018/speakers/enrico-campidoglio/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Swetugg 2018</a></span>
     <div class="nowrap">
       <span class="inline-info">February 8–9, 2018</span>
       <span class="inline-info">Stockholm, Sweden 🇸🇪</span>
     </div>
   </h4>
-  <h4><a href="https://swetugg.se/swetugg-2018/speakers/enrico-campidoglio/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Understanding Git — Behind the Command Line</a></h4>
 
   <p></p>
 
   <h4>
-    <span>Copenhagen .NET User Group</span>
+      <span><a href="https://www.meetup.com/Copenhagen-Net-User-Group/events/247489498/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Copenhagen .NET User Group</a></span>
     <div class="nowrap">
       <span class="inline-info">February 21, 2018</span>
       <span class="inline-info">Copenhagen, Denmark 🇩🇰</span>
     </div>
   </h4>
-  <h4><a href="https://www.meetup.com/Copenhagen-Net-User-Group/events/247489498/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Cake + .NET Core = Write Once, Build Anywhere</a></h4>
 
   <hr/>
 
