--- a/speaking/index.html
+++ b/speaking/index.html
@@ -47,6 +47,16 @@ redirect_from: /tag/speaking/
     </div>
   </h4>
 
+  <p></p>
+
+  <h4>
+      <span><a href="https://techoramanetherlands2018.sched.com/event/EjEM/understanding-git-behind-the-command-line" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Techorama Netherlands 2018</a></span>
+    <div class="nowrap">
+      <span class="inline-info">October 1–3, 2018</span>
+      <span class="inline-info">Ede, Netherlands 🇳🇱</span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="podcasts">Podcasts</h2>
