Removes the link to my Lanyrd page since the site is 503

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -17,7 +17,7 @@ redirect_from: /tag/speaking/
   <hr/>
 
   <h2 id="schedule">Schedule</h2>
-  <p>Here's a list of my recent and upcoming talks. Previous ones are on <a href="http://lanyrd.com/profile/ecampidoglio/" target="_blank">Lanyrd</a>.</p>
+  <p>Here's a list of my recent and upcoming talks.</p>
 
   <h4>
       <span><a href="https://ndc-london.com/talk/cake-net-core-write-once-build-anywhere/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> NDC London 2018</a></span>
