Removes old entries from the speaking schedule

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -17,37 +17,7 @@ redirect_from: /tag/speaking/
   <hr/>
 
   <h2 id="schedule">Schedule</h2>
-  <p>Here's a list of my recent and upcoming talks.</p>
-
-  <h4>
-      <span><a href="https://ndc-london.com/talk/cake-net-core-write-once-build-anywhere/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> NDC London 2018</a></span>
-    <div class="nowrap">
-      <span class="inline-info">January 15–19, 2018</span>
-      <span class="inline-info">London, UK 🇬🇧</span>
-    </div>
-  </h4>
-
-  <p></p>
-
-  <h4>
-      <span><a href="https://swetugg.se/swetugg-2018/speakers/enrico-campidoglio/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Swetugg 2018</a></span>
-    <div class="nowrap">
-      <span class="inline-info">February 8–9, 2018</span>
-      <span class="inline-info">Stockholm, Sweden 🇸🇪</span>
-    </div>
-  </h4>
-
-  <p></p>
-
-  <h4>
-      <span><a href="https://www.meetup.com/Copenhagen-Net-User-Group/events/247489498/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Copenhagen .NET User Group</a></span>
-    <div class="nowrap">
-      <span class="inline-info">February 21, 2018</span>
-      <span class="inline-info">Copenhagen, Denmark 🇩🇰</span>
-    </div>
-  </h4>
-
-  <p></p>
+  <p>I keep a list of my upcoming talks at conferences and user groups.</p>
 
   <h4>
       <span><a href="https://techoramanetherlands2018.sched.com/event/EjEM/understanding-git-behind-the-command-line" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Techorama Netherlands 2018</a></span>
